# eval_STSPIN_FW_encoder

./: .gitignore  MDFW 6.0 SPI Specification.md  test-md-bench.stwb6
.obsidian/: workspace.json
motor_driver_eval_graph/: .clangd  .mxproject  makefile  motor_driver_eval_graph.ioc  motor_driver_eval_graph.ioc.bak  motor_driver_eval_graph.ioc.wb  motor_driver_eval_graph.settings  motor_driver_eval_graph.wbdef
motor_driver_eval_graph/Inc/: drive_parameters.h  main.h  mc_config.h  mc_configuration_registers.h  mc_parameters.h  mc_stm_types.h  mcp_config.h  parameters_conversion.h  parameters_conversion_f0xx.h  pmsm_motor_parameters.h  power_stage_parameters.h  r1_ps_pwm_curr_fdbk.h  regular_conversion_manager.h  stm32f0xx_hal_conf.h  stm32f0xx_it.h
motor_driver_eval_graph/STM32CubeIDE/: .cproject  .project  STM32F031C6TX_FLASH.ld  motor_driver_eval_graph (1).launch  motor_driver_eval_graph Release.launch  motor_driver_eval_graph.launch
motor_driver_eval_graph/STM32CubeIDE/Application/Startup/: startup_stm32f031c6tx.s
motor_driver_eval_graph/STM32CubeIDE/Debug/: compile_commands.json  makefile  motor_driver_eval_graph.elf  motor_driver_eval_graph.list  motor_driver_eval_graph.map  objects.list
motor_driver_eval_graph/STM32CubeIDE/Drivers/CMSIS/: system_stm32f0xx.d
motor_driver_eval_graph/STM32CubeIDE/Drivers/STM32F0xx_HAL_Driver/: stm32f0xx_hal.d  stm32f0xx_hal_adc.d  stm32f0xx_hal_adc_ex.d  stm32f0xx_hal_cortex.d  stm32f0xx_hal_dma.d  stm32f0xx_hal_exti.d  stm32f0xx_hal_flash.d  stm32f0xx_hal_flash_ex.d  stm32f0xx_hal_gpio.d  stm32f0xx_hal_i2c.d  stm32f0xx_hal_i2c_ex.d  stm32f0xx_hal_pwr.d  stm32f0xx_hal_pwr_ex.d  stm32f0xx_hal_rcc.d  stm32f0xx_hal_rcc_ex.d  stm32f0xx_hal_tim.d  stm32f0xx_hal_tim_ex.d  stm32f0xx_hal_uart.d  stm32f0xx_hal_uart_ex.d
motor_driver_eval_graph/STM32CubeIDE/Middlewares/MotorControl/: bus_voltage_sensor.d  circle_limitation.d  digital_output.d  enc_align_ctrl.d  encoder_speed_pos_fdbk.d  mcpa.d  ntc_temperature_sensor.d  open_loop.d  pid_regulator.d  pqd_motor_power_measurement.d  pwm_common.d  r_divider_bus_voltage_sensor.d  ramp_ext_mngr.d  revup_ctrl.d  speed_pos_fdbk.d  speed_torq_ctrl.d  virtual_speed_sensor.d
motor_driver_eval_graph/STM32CubeIDE/Release/: makefile  motor_driver_eval_graph.elf  motor_driver_eval_graph.list  motor_driver_eval_graph.map  objects.list
motor_driver_eval_graph/Src/: main.c  mc_config.c  mc_configuration_registers.c  mc_interface.c  mc_parameters.c  mc_tasks.c  pwm_curr_fdbk.c  r1_ps_pwm_curr_fdbk.c  register_interface.c  regular_conversion_manager.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c  stm32f0xx_mc_it.c  usart_aspep_driver.c
test-md-bench/: .mxproject  CMakeLists.txt  Makefile  STM32F031C6Tx_FLASH.ld  cmake_install.cmake  compile_commands.json  test-md-bench.elf  test-md-bench.ioc  test-md-bench.ioc.bak  test-md-bench.ioc.wb  test-md-bench.map  test-md-bench.settings  test-md-bench.wbdef
test-md-bench/.cache/clangd/index/: aspep.c.59D928F5D3DB53B5.idx  aspep.c.E0BDA15C1B5ED376.idx  aspep.h.05A7212F6D9CEAC1.idx  aspep.h.80FE9A86CD342FD0.idx  bus_voltage_sensor.c.0DF95EF0C0D1AF8A.idx  bus_voltage_sensor.c.55F3BBD6706FE254.idx  bus_voltage_sensor.h.0B5A552793C1991E.idx  bus_voltage_sensor.h.E01C91D9C73033E6.idx  circle_limitation.c.1A91B9F3BD4EB1D2.idx  circle_limitation.c.AB8CFB45EE85324D.idx  circle_limitation.h.6362B58DF29A1D0E.idx  circle_limitation.h.C17F19F0436FD8AC.idx  cmsis_compiler.h.8273997D6C53FFD6.idx  cmsis_compiler.h.9D3AB542D390CE9E.idx  cmsis_gcc.h.A968C86B1D9EE8CD.idx  cmsis_gcc.h.B7673AB8BEFC21D8.idx  cmsis_version.h.AE5D46744F76AABC.idx  (+285 more)
test-md-bench/Inc/: aspep.h  drive_parameters.h  main.h  mc_config.h  mc_config_common.h  mc_configuration_registers.h  mc_stm_types.h  mcp_config.h  parameters_conversion.h  parameters_conversion_f0xx.h  pmsm_motor_parameters.h  power_stage_parameters.h  r1_ps_pwm_curr_fdbk.h  register_interface.h  stm32f0xx_hal_conf.h  stm32f0xx_it.h
test-md-bench/Src/: aspep.c  main.c  mc_config.c  mc_config_common.c  mc_configuration_registers.c  mc_parameters.c  mc_tasks.c  mc_tasks_foc.c  mcp_config.c  r1_ps_pwm_curr_fdbk.c  register_interface.c  regular_conversion_manager.c  stm32_mc_common_it.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c  stm32f0xx_mc_it.c
test-md-bench/cmake/: gcc-arm-none-eabi.cmake
test-md-bench/cmake/stm32cubemx/: CMakeLists.txt  Makefile  cmake_install.cmake
(+468 files in other folders)
